<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
  <string name="app_name_debug">SouqMoon | سوق مون</string>
  <string name="app_name">SouqMoon | سوق مون</string>
  <string name="fb_login_protocol_scheme" translatable="false">Fb802733460697057</string>
  <string name="facebook_app_id" translatable="false">802733460697057</string>
  <string name="facebook_client_token">80b99f338097c575f40acb5b3a0be4a9</string>
  <string name="google_direction_api" translatable="false">AIzaSyApcEA5RXncL4762cObXGeBaE1x-nEZpOM</string>
  <string name="moon_info">The first social trading platform in the Middle East</string>
  <string name="discover">Discover</string>
  <string name="my_account">My Account</string>
  <string name="map">Map</string>
  <string name="confirm">Confirm</string>
  <string name="name">Name</string>
  <string name="confirm_resend">Resend Code</string>
  <string name="confirm_header_text">Activation Code</string>
  <string name="enter_the_code_sent_to_your_phone">Enter the code sent to you on your whatsapp number to activate your account</string>
  <string name="email">E-mail</string>
  <string name="reason_for_contact">Reason for contact</string>
  <string name="content_of_the_message">Content of the message</string>
  <string name="send">Send</string>
  <string name="log_in">Login</string>
  <string name="phone">Phone</string>
  <string name="choose_language">Choose Language</string>
  <string name="next">Next</string>
  <string name="choose_country">Choose Country</string>
  <string name="no_internet">No internet connection please try again later</string>
  <string name="previous_app">Previous</string>
  <string name="dot">•</string>
  <string name="required">this is field is required</string>
  <string name="skip">Skip</string>
  <string name="connection_error">Please Check Your Connection</string>
  <string name="some_error">Some error occurred, try again later</string>
  <string name="settings">Settings</string>
  <string name="about_moon">About SouqMoon</string>
  <string name="contact_us">Contact Us</string>
  <string name="terms">Terms And Conditions</string>
  <string name="help">Help</string>
  <string name="change_language">Change Language</string>
  <string name="change_country">Change Country</string>
  <string name="social_media">Social Media</string>
  <string name="register_as_provider">Register as Provider</string>
  <string name="share_app">Share App</string>
  <string name="rate_app">Rate App</string>
  <string name="save">Save</string>
  <string name="search">Search</string>
  <string name="show_more">Show More</string>
  <string name="departments">Departments</string>
  <string name="show_all">Show All</string>
  <string name="verification_code_not_valid">Verification Code Not Valid</string>
  <string name="follow">Follow</string>
  <string name="un_follow">unfollow</string>
  <string name="top_stores_rated">Top Stores Rated</string>
  <string name="home">Home</string>
  <string name="choose_method_of_contact">Choose method of contact</string>
  <string name="or_can_full_the_next_form_and_will_contact_you">Or fill in the information below</string>
  <string name="send_mail">Send mail</string>
  <string name="call_for_phone_list">Call for phone list</string>
  <string name="main_moon_location">Main SouqMoon location</string>
  <string name="please_enter_your_name">Please enter your name</string>
  <string name="please_enter_your_message">Please enter your message</string>
  <string name="please_enter_your_email">Please enter your email</string>
  <string name="please_enter_valid_email">Please enter valid email</string>
  <string name="please_enter_your_reason">Please enter your reason</string>
  <string name="personal_info">Personal info</string>
  <string name="last_ads_seen">Last ads seen</string>
  <string name="stores_had_been_followed">Stores had been followed</string>
  <string name="last_search">Last search</string>
  <string name="favourite">Favourite</string>
  <string name="stores_had_been_blocked">Stores had been blocked</string>
  <string name="logout">Logout</string>
  <string name="please_enter_your_phone">Please enter your phone</string>
  <string name="whatsapp">Whatsapp</string>
  <string name="chat">Chat</string>
  <string name="call">Call</string>
  <string name="suggestions_ads_for_you">Suggestions ads for you</string>
  <string name="most_popular_ads">Most popular ads</string>
  <string name="advertisements">Advertisements</string>
  <string name="premium">Premium</string>
  <string name="has_negatiable">Has negatiable</string>
  <string name="not_negatiable">Not negatiable</string>
  <string name="description_on_ads">Description on ads</string>
  <string name="ads_owner">Ads owner</string>
  <string name="advices_for_safe">Advices for safe</string>
  <string name="check_purchasing_before_buying">Check purchasing before buying</string>
  <string name="pay_only_after_collect_item">Pay only after collect item</string>
  <string name="beware_of_unrealistic_offers">Beware of unrealistic offers</string>
  <string name="meet_seller_in_safe_place">Meet seller in safe place</string>
  <string name="some_customers_reviews">Some customers reviews</string>
  <string name="report_on_issue">Report on issue</string>
  <string name="similar_ads">Similar ads</string>
  <string name="please_install_whatsapp_on_your_phone">Please install whatsapp on your phone</string>
  <string name="loading_more">Loading more</string>
  <string name="update">Update</string>
  <string name="show_number_hours">Show number hours</string>
  <string name="views">views</string>
  <string name="rates">Rates</string>
  <string name="followers">Followers</string>
  <string name="description_on_shop">description on shop</string>
  <string name="store_map">Store map</string>
  <string name="block_store">Block store</string>
  <string name="store_details">Store details</string>
  <string name="start_app">Start app</string>
  <string name="please_choose_reason_for_report">Please choose reason for report</string>
  <string name="daily_working_hours">daily working hours</string>
  <string name="saturday">Saturday</string>
  <string name="sunday">Sunday</string>
  <string name="monday">monday</string>
  <string name="tuesday">tuesday</string>
  <string name="wednesday">wednesday</string>
  <string name="thursday">thursday</string>
  <string name="friday">Friday</string>
  <string name="from">From</string>
  <string name="morning">morning</string>
  <string name="until">until</string>
  <string name="evening">evening</string>
  <string name="closed">Closed</string>
  <string name="back">back</string>
  <string name="search_on_department">Search on department</string>
  <string name="search_on_advertise">Search on advertise</string>
  <string name="subsections">Subsections</string>
  <string name="stores">Stores</string>
  <string name="like">Like</string>
  <string name="likes">Likes</string>
  <string name="share">Share</string>
  <string name="show_all_comments">Show all comments</string>
  <string name="add_your_comment">Add your comment</string>
  <string name="comments">Comments</string>
  <string name="please_complete_your_profile">Please complete your profile</string>
  <string name="total">Total</string>
  <string name="this_was_liked_by_users">This was liked by %d users</string>
  <string name="special_ads">Special ads</string>
  <string name="see_all_advertisement">See all advertisement</string>
  <string name="please_choose_block_reason">Please choose block reason</string>
  <string name="please_choose_report_reason">Please choose report reason</string>
  <string name="submit_report">Submit report</string>
  <string name="the_oldest">the oldest</string>
  <string name="the_most_recent">the most recent</string>
  <string name="highest_price">highest price</string>
  <string name="lowest_price">Lowest price</string>
  <string name="sort_by">Sort by</string>
  <string name="filter">Filter</string>
  <string name="filter_sort">Sort</string>
  <string name="notification_removed_successfully">Notification removed successfully</string>
  <string name="notification_type">Notification type</string>
  <string name="moon_notifications">SouqMoon notifications</string>
  <string name="moon_traders">SouqMoon traders</string>
  <string name="notifications">Notifications</string>
  <string name="there_are_no_result_please_try_again">There are no result please try again</string>
  <string name="advertisement">Advertisement</string>
  <string name="add_store_now">Add your store now</string>
  <string name="city">City</string>
  <string name="filter_by_categories">Filter by categories</string>
  <string name="filter_search">Filter search</string>
  <string name="there_are_no_customers_reviews">"There are no customer reviews "</string>
  <string name="customers_reviews">Customers reviews</string>
  <string name="add_description_for_rate">Add description for rate</string>
  <string name="add_rate">Add Rate</string>
  <string name="add_review">Add Review</string>
  <string name="other_options">Other options</string>
  <string name="all_ads">All ads</string>
  <string name="premium_ads">premium ads</string>
  <string name="free_ads">Free ads</string>
  <string name="filter_results">Filter results</string>
  <string name="main_section">main section</string>
  <string name="sub_section">Sub section</string>
  <string name="most_compatible">most compatible</string>
  <string name="to">to</string>
  <string name="filter_by_price">Filter by price</string>
  <string name="cancel_ban">Cancel ban</string>
  <string name="code_had_been_sent">Code had been sent</string>
  <string name="filter_by_rate">Filter by rate</string>
  <string name="no_data_found">No Data Found</string>
  <string name="total_ads_count">Total Advertisements %s advertisement</string>
  <string name="advertisements_had_been_viewd">%s advertisements had been viewed</string>
  <string name="additional_features">Additional Features</string>
  <string name="user">User</string>
  <string name="member_of">Member of</string>
  <string name="new_notification">New notice from SouqMoon</string>
  <string name="submit">Submit</string>
  <string name="camera">Camera</string>
  <string name="gallery">Gallery</string>
  <string name="please_choose_main_section">Please Choose Main Section</string>
  <string name="you_didn_t_accept_permission">You didn\'t Accept Permission</string>
  <string name="total_ads">Total Summation (%s) Advertisement</string>
  <string name="please_login_agin">Please log in again</string>
  <string name="do_you_want_to_exit_from_app">Do you want to exit the application?</string>
  <string name="show_mail">Show E-mail</string>
  <string name="crop_image">Crop Image</string>
  <string name="add_store">Get Listed</string>
  <string name="show_stores">Show Stores</string>
  <string name="highest_rate">Top Rated</string>
  <string name="area">Area</string>
  <string name="description">Description</string>
  <string name="location_99">Location</string>
  <string name="store_logo">Store Logo</string>
  <string name="store_main_data">Store Main Data</string>
  <string name="store_name">Store Name</string>
  <string name="store_sub_data">Store Sub Data</string>
  <string name="advertisement_website_link">Advertising Website</string>
  <string name="email_9">Email</string>
  <string name="website_link">Website</string>
  <string name="contact_phone">Advertising Phone</string>
  <string name="whatsapp_phone">Whatsapp Phone</string>
  <string name="tax_number">Tax Number</string>
  <string name="change_background_image">Change Background Image</string>
  <string name="category_name">Category Name</string>
  <string name="subcategory_name">Sub Category Name</string>
  <string name="main_category">Main Category Name</string>
  <string name="pick_sub_category">Pick Main Category Name</string>
  <string name="nick_name">Nickname</string>
</resources>