<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <item
    android:id="@+id/home_fragment"
    android:icon="@drawable/ic_home"
    android:title="@string/home" />

  <item
    android:id="@+id/nav_explore"
    android:icon="@drawable/ic_discover"
    android:title="@string/discover" />
<!--  <item-->
<!--    android:id="@+id/nav_account"-->
<!--    android:icon="@drawable/ic_profile_circle"-->
<!--    android:title="@string/my_account" />-->

  <item
    android:title="@string/add_store"
    android:id="@+id/addStoreFragment" />

  <item
    android:id="@+id/mapFragment"
    android:icon="@drawable/ic_global"
    android:title="@string/map" />

  <item
    android:id="@+id/nav_settings"
    android:icon="@drawable/ic_more_bottom_bar"
    android:title="@string/more" />

</menu>