<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"

  tools:context="grand.app.moon.presentation.myStore.AddOrEditStoreSubCategoryFragment"

  tools:ignore="Autofill,LabelFor">

  <data>
    <variable
      name="viewModel"
      type="grand.app.moon.presentation.myStore.viewModel.AddOrEditStoreSubCategoryViewModel" />
  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <include
      android:id="@+id/toolbarCurve"

      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      layout="@layout/item_toolbar_curve"

      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      style="@style/TextTajawalMedium14"
      android:textColor="@color/colorPrimary"
      android:textDirection="locale"

      android:layout_marginTop="23dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"

      android:text="@string/subcategory_name"/>

    <EditText
      style="@style/EditTextForCreateShop"

      android:layout_marginTop="23dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"

      android:padding="16dp"

      tools:hint="@string/category_name"
      editText_setHintWithRequiredAstrix="@{@string/category_name}"

      android:text="@={viewModel.subCategoryName}" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      style="@style/TextTajawalMedium14"
      android:textColor="@color/colorPrimary"
      android:textDirection="locale"

      android:layout_marginTop="21dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"

      android:text="@string/main_category"/>

    <TextView
      style="@style/EditTextForCreateShop.DropDown"

      android:layout_marginTop="21dp"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"

      app:drawableEndCompat="@drawable/ic_arrow_down_d303"

      tools:hint="@string/pick_sub_category"
      editText_setHintWithRequiredAstrix="@{@string/pick_sub_category}"

      android:text="@{viewModel.categoryName}"

      android:onClick="@{v -> viewModel.selectCategory(v)}"/>

    <View
      android:layout_width="1dp"
      android:layout_height="0dp"
      android:layout_weight="1"/>

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:layout_marginTop="5dp"
      android:layout_marginBottom="17dp"
      android:layout_marginStart="27dp"
      android:layout_marginEnd="27dp"

      style="@style/TextTajawalMedium14"

      android:padding="16dp"

      android:gravity="center"
      android:textColor="@color/white"
      android:text="@{viewModel.buttonText}"

      android:onClick="@{v -> viewModel.addOrEdit(v)}"

      android:background="@drawable/dr_rounded_5_button"/>

  </LinearLayout>

</layout>
