<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"

  tools:context="grand.app.moon.presentation.myStore.CreateStoreFragment"

  tools:ignore="Autofill,LabelFor,ContentDescription">

  <data>
    <variable
      name="viewModel"
      type="grand.app.moon.presentation.myStore.viewModel.CreateStoreViewModel" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"

      android:background="@color/all_screens_background">

      <ImageView
        android:id="@+id/backgroundImageView"

        imageView_setupWithGlideOrIgnoreGlideImageViaXmlModelBA="@{viewModel.backgroundImage}"

        android:layout_width="0dp"
        android:layout_height="156dp"

        tools:srcCompat="@drawable/splash"
        imageView_setupWithGlideOrIgnore_drawableResName="@{`splash`}"
        android:scaleType="centerCrop"

        android:onClick="@{v -> viewModel.changeCoverImage(v)}"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
        android:id="@+id/changeBackgroundImageTextView"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:background="@drawable/dr_rect_3"
        android:backgroundTint="#3B727889"

        android:layout_marginTop="9dp"
        android:layout_marginEnd="11dp"

        android:text="@string/change_background_image"
        style="@style/TextTajawalMedium16"
        android:textSize="11sp"
        android:textColor="#FFFFFF"
        android:textDirection="locale"
        app:drawableStartCompat="@drawable/ic_photo_6666"
        android:drawablePadding="8dp"

        android:padding="7dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

      <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoImageView"

        imageView_setupWithGlideOrIgnoreGlideImageViaXmlModelBA="@{viewModel.profileImage}"

        android:layout_width="109dp"
        android:layout_height="109dp"

        android:src="@drawable/ic_logo_shop_in_create_shop"

        android:scaleType="centerCrop"

        app:shapeAppearance="@style/ShapeCircle"
        app:shapeAppearanceOverlay="@style/ShapeCircle"

        app:strokeColor="@color/white"
        app:strokeWidth="2dp"

        android:onClick="@{v -> viewModel.changeLogoImage(v)}"

        android:padding="2dp"

        app:layout_constraintTop_toBottomOf="@id/backgroundImageView"
        app:layout_constraintBottom_toBottomOf="@id/backgroundImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:src="@drawable/ic_camera_in_creaate_shop"

        android:layout_marginBottom="7dp"

        app:layout_constraintBottom_toBottomOf="@id/logoImageView"
        app:layout_constraintEnd_toEndOf="@id/logoImageView"/>

      <TextView
        android:id="@+id/logoLableTextView"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        style="@style/TextTajawalBold14"
        android:textSize="14sp"

        android:layout_marginTop="17dp"

        android:text="@string/store_logo"

        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

      <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:orientation="vertical"

        android:background="@drawable/dr_rect_15"
        android:backgroundTint="@color/white"

        android:layout_marginTop="32.5dp"
        android:layout_marginBottom="21dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"

        android:elevation="2dp"

        android:paddingTop="24.5dp"
        android:paddingBottom="21dp"
        android:paddingStart="11dp"
        android:paddingEnd="11dp"
        android:clipToPadding="false"

        app:layout_constraintVertical_bias="0"

        app:layout_constraintTop_toBottomOf="@id/logoLableTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          style="@style/TextTajawalBold14"
          android:textColor="#0D0633"

          android:text="@string/store_main_data"/>

        <EditText
          style="@style/EditTextForCreateShop"

          android:layout_marginTop="21dp"

          tools:hint="@string/store_name"
          editText_setHintWithRequiredAstrix="@{@string/store_name}"

          android:text="@={viewModel.storeName}"/>

        <EditText
          style="@style/EditTextForCreateShop"

          tools:hint="@string/nick_name"
          editText_setHintWithRequiredAstrix="@{@string/nick_name}"

          android:text="@={viewModel.userName}"/>

        <TextView
          style="@style/EditTextForCreateShop.DropDown"

          tools:hint="@string/city"
          editText_setHintWithRequiredAstrix="@{@string/city}"

          android:text="@{viewModel.cityName}"

          android:onClick="@{v -> viewModel.selectCity(v)}"/>

        <TextView
          style="@style/EditTextForCreateShop.DropDown"

          tools:hint="@string/area"
          editText_setHintWithRequiredAstrix="@{@string/area}"

          android:enabled="@{viewModel.enableAreaField}"

          android:text="@{viewModel.areaName}"

          android:onClick="@{v -> viewModel.selectArea(v)}"/>

        <TextView
          style="@style/EditTextForCreateShop"

          tools:hint="@string/location_99"
          editText_setHintWithRequiredAstrix="@{@string/location_99}"

          android:text="@{viewModel.address}"

          android:onClick="@{v -> viewModel.selectLocation(v)}"/>

        <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:minHeight="133dp"

          android:gravity="top"

          style="@style/EditTextForCreateShop"

          tools:hint="@string/description"
          editText_setHintWithRequiredAstrix="@{@string/description}"

          android:inputType="textMultiLine"

          android:text="@={viewModel.description}"/>

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"

          android:layout_marginTop="29.5dp"

          style="@style/TextTajawalBold14"
          android:textColor="#0D0633"

          android:text="@string/store_sub_data"/>

        <EditText
          style="@style/EditTextForCreateShop"

          android:layout_marginTop="28dp"

          android:hint="@string/advertisement_website_link"

          android:text="@={viewModel.advertisingLink}"/>

        <EditText
          style="@style/EditTextForCreateShop"

          android:hint="@string/email_9"

          android:text="@={viewModel.email}"

          android:inputType="textEmailAddress"/>

        <EditText
          style="@style/EditTextForCreateShop"

          android:hint="@string/website_link"

          android:text="@={viewModel.websiteLink}"/>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          
          android:layoutDirection="locale"

          android:layout_marginTop="16dp">

          <FrameLayout
            android:id="@+id/containerOfCountryCodeForAdsPhoneFrameLayout"

            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:background="@drawable/dr_rounded_5_text_field_2"

            android:layoutDirection="locale"

            android:layout_marginEnd="4dp"

            app:layout_constraintEnd_toStartOf="@id/adsPhoneEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.hbb20.CountryCodePicker
              android:id="@+id/countryCodePickerForAdsPhone"

              android:layout_width="wrap_content"
              android:layout_height="wrap_content"

              android:layout_gravity="center"
              android:gravity="center"

              app:ccp_showNameCode="false"

              android:layoutDirection="ltr"

              app:ccpDialog_backgroundColor="@color/colorWhite"
              app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimary"
              app:ccpDialog_searchEditTextTint="@color/colorWhite"
              app:ccpDialog_textColor="@color/colorPrimary"
              app:ccpDialog_showTitle="false"
              app:ccpDialog_rippleEnable="true"

              app:ccp_textSize="@dimen/text_size14"
              app:ccp_autoDetectCountry="true"
              app:ccp_areaCodeDetectedCountry="true"
              app:ccp_autoDetectLanguage="true"
              app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
              app:ccp_arrowColor="@color/colorPrimary"
              app:ccp_contentColor="@color/colorPrimary"
              app:ccp_useDummyEmojiForPreview="true"

              app:layout_constraintEnd_toStartOf="@id/adsPhoneEditText"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"/>

          </FrameLayout>

          <TextView
            android:id="@+id/activateOrDeactivateButtonForAdsPhoneTextView"

            android:layoutDirection="locale"

            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="4dp"

            android:onClick="@{v -> viewModel.activateAdsPhone(v)}"

            android:backgroundTint="@{viewModel.showNotActivatedAdsPhone ? @color/colorPrimary : @color/button_disabled_4,default=@color/colorPrimary}"
            android:background="@drawable/dr_rect_5"

            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            style="@style/TextTajawalMedium14"
            android:textColor="@color/white"
            android:textDirection="locale"
            android:gravity="center"

            android:text="@{viewModel.showNotActivatedAdsPhone ? @string/activate : @string/activated,default=@string/activate}"

            app:layout_constraintStart_toEndOf="@id/adsPhoneEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

          <EditText
            android:id="@+id/adsPhoneEditText"

            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/EditTextForCreateShop"
            android:layout_marginTop="0dp"
            android:textDirection="locale"
            android:textAlignment="viewStart"
            android:gravity="center_vertical"

            android:hint="@string/contact_phone"

            android:text="@={viewModel.advertisingPhone}"

            android:inputType="phone"

            textView_serDrawableCompatBA_drawableEnd="@{viewModel.showValidPhoneNumForAdsPhone ? @drawable/text_input_correct_2 : null}"
            tools:drawableEnd="@drawable/text_input_correct_2"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/containerOfCountryCodeForAdsPhoneFrameLayout"
            app:layout_constraintEnd_toStartOf="@id/activateOrDeactivateButtonForAdsPhoneTextView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:layout_marginTop="16dp">

          <FrameLayout
            android:id="@+id/containerCountryCodePickerForWhatsAppPhoneFrameLayout"

            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:background="@drawable/dr_rounded_5_text_field_2"

            android:layoutDirection="locale"

            android:layout_marginEnd="4dp"

            app:layout_constraintEnd_toStartOf="@id/whatsAppPhoneEditText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.hbb20.CountryCodePicker
              android:id="@+id/countryCodePickerForWhatsAppPhone"

              android:layout_width="wrap_content"
              android:layout_height="wrap_content"

              android:layout_gravity="center"
              android:gravity="center"

              android:layoutDirection="ltr"

              app:ccp_showNameCode="false"

              app:ccpDialog_backgroundColor="@color/colorWhite"
              app:ccpDialog_fastScroller_bubbleColor="@color/colorPrimary"
              app:ccpDialog_searchEditTextTint="@color/colorWhite"
              app:ccpDialog_textColor="@color/colorPrimary"
              app:ccpDialog_showTitle="false"
              app:ccpDialog_rippleEnable="true"

              app:ccp_textSize="@dimen/text_size14"
              app:ccp_autoDetectCountry="true"
              app:ccp_areaCodeDetectedCountry="true"
              app:ccp_autoDetectLanguage="true"
              app:ccp_countryAutoDetectionPref="SIM_NETWORK_LOCALE"
              app:ccp_arrowColor="@color/colorPrimary"
              app:ccp_contentColor="@color/colorPrimary"
              app:ccp_useDummyEmojiForPreview="true"

              app:layout_constraintEnd_toStartOf="@id/whatsAppPhoneEditText"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"/>

          </FrameLayout>

          <TextView
            android:id="@+id/activateOrDeactivateButtonForWhatsAppPhoneTextView"

            android:layout_width="wrap_content"
            android:layout_height="0dp"

            android:layout_marginStart="4dp"

            android:onClick="@{v -> viewModel.activateWhatsAppPhone(v)}"

            android:backgroundTint="@{viewModel.showNotActivatedWhatsAppPhone ? @color/colorPrimary : @color/button_disabled_4,default=@color/colorPrimary}"
            android:background="@drawable/dr_rect_5"

            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"

            style="@style/TextTajawalMedium14"
            android:textColor="@color/white"
            android:textDirection="locale"
            android:gravity="center"

            android:text="@{viewModel.showNotActivatedWhatsAppPhone ? @string/activate : @string/activated,default=@string/activate}"

            app:layout_constraintStart_toEndOf="@id/whatsAppPhoneEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

          <EditText
            android:id="@+id/whatsAppPhoneEditText"

            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"

            android:layout_width="0dp"
            android:layout_height="wrap_content"

            style="@style/EditTextForCreateShop"
            android:layout_marginTop="0dp"
            android:textDirection="locale"
            android:textAlignment="viewStart"

            android:hint="@string/whatsapp_phone"

            android:text="@={viewModel.whatsAppPhone}"

            android:inputType="phone"

            textView_serDrawableCompatBA_drawableEnd="@{viewModel.showValidPhoneNumForWhatsAppPhone ? @drawable/text_input_correct_2 : null}"
            tools:drawableEnd="@drawable/text_input_correct_2"
            android:drawablePadding="4dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/containerCountryCodePickerForWhatsAppPhoneFrameLayout"
            app:layout_constraintEnd_toStartOf="@id/activateOrDeactivateButtonForWhatsAppPhoneTextView"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
          style="@style/EditTextForCreateShop"

          android:hint="@string/tax_number"

          android:text="@={viewModel.taxNumber}"

          android:inputType="number"/>
        
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"

          android:padding="17dp"

          android:background="@drawable/dr_rounded_5_button"

          android:layout_marginTop="24dp"

          android:gravity="center"
          android:textDirection="locale"

          style="@style/TextTajawalMedium14"

          android:text="@string/save"
          android:textColor="@color/white"

          android:onClick="@{v -> viewModel.createOrUpdateStore(v)}"/>

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.core.widget.NestedScrollView>

</layout>
